[gd_scene load_steps=6 format=3 uid="uid://b48k7ome4d88h"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_yitt0"]
[ext_resource type="PackedScene" uid="uid://c5jraoq5jrtmo" path="res://Scenes/spawner.tscn" id="4_ix7xf"]
[ext_resource type="Texture2D" uid="uid://cirr2fc83dkmh" path="res://Assets/Untitled 11.png" id="6_y5hbf"]
[ext_resource type="Texture2D" uid="uid://d2ow732tkkb8u" path="res://Assets/dollar.png" id="7_dq44a"]
[ext_resource type="PackedScene" uid="uid://cp2poy83r85ie" path="res://Scenes/exit_area.tscn" id="7_u6c5t"]

[node name="Main" type="Node2D" groups=["customers", "lemons"]]
script = ExtResource("1_yitt0")

[node name="Spawner" parent="." instance=ExtResource("4_ix7xf")]
position = Vector2(1003, 372)

[node name="Spawner2" parent="." instance=ExtResource("4_ix7xf")]
position = Vector2(54, 378)
move_right = true

[node name="ExitArea" parent="." instance=ExtResource("7_u6c5t")]
position = Vector2(-42, 413)

[node name="ExitArea2" parent="." instance=ExtResource("7_u6c5t")]
position = Vector2(1200, 448)

[node name="LemonadeIcon" type="Sprite2D" parent="."]
position = Vector2(40, 81)
scale = Vector2(2, 2)
texture = ExtResource("6_y5hbf")

[node name="Lemonade" type="Label" parent="."]
offset_left = 83.0
offset_top = 65.0
offset_right = 370.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 32
text = "m"

[node name="Dollar" type="Sprite2D" parent="."]
position = Vector2(41, 38)
scale = Vector2(2, 2)
texture = ExtResource("7_dq44a")

[node name="Dollars" type="Label" parent="."]
offset_left = 83.0
offset_top = 18.0
offset_right = 193.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 32
text = "Dollars"

[node name="StartScreen" type="CanvasLayer" parent="."]
process_mode = 2

[node name="ColorRect" type="ColorRect" parent="StartScreen"]
offset_left = 85.0
offset_top = 21.0
offset_right = 1059.0
offset_bottom = 623.0
color = Color(1, 1, 0.682353, 1)

[node name="StartGame" type="Button" parent="StartScreen"]
offset_left = 470.0
offset_top = 482.0
offset_right = 622.0
offset_bottom = 559.0
text = "Click here to start"

[connection signal="pressed" from="StartScreen/StartGame" to="." method="_on_start_game_pressed"]
